# stockgg

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PROMPTS.md  README.md  SYSTEM.md  pyproject.toml  wrangler.jsonc
.claude/: CLAUDE.md  settings.json  settings.local.json
data/: hot_theme_rules.md  pullback_public.json  theme_dictionary.json  theme_rules.md
docs/: .assetsignore  _headers  app.js  index.html  manifest.json  style.css  sw.js
hooks/: pre-commit
launchd/: com.iia.article-crawl.plist  com.iia.catchup.plist  com.iia.daily-briefing.plist  com.iia.market-notes.plist  com.iia.podcast-backfill.plist  com.iia.podcast-crawl.plist  com.iia.tw-rankings.plist  com.iia.us-rankings.plist
migration/: PROGRESS.md  launchctl_pre_cutover.txt  queries_inventory.md  rls_design.md
migrations/: 001_initial_schema.sql  002_refinement_schema.sql  003_market_notes.sql
scripts/: api_cost_check.py  backfill_refined.py  build_theme_dictionary.py  catchup.py  check_db.py  daily_briefing.py  debug_pressplay_api.py  deploy_db_proxy_public.sh  deploy_site.sh  explore_investanchors.py  explore_investanchors2.py  explore_investanchors3.py  explore_macromicro.py  explore_macromicro2.py  explore_macromicro3.py  explore_pressplay.py  explore_pressplay10.py  explore_pressplay11.py  explore_pressplay2.py  explore_pressplay3.py  explore_pressplay4.py  explore_pressplay5.py  explore_pressplay6.py  explore_pressplay7.py  explore_pressplay8.py  explore_pressplay9.py  explore_pressplay_final.py  explore_statementdog.py  explore_statementdog2.py  explore_vocus.py  explore_vocus2.py  (+12 more)
(+39 files in other folders)
