[project]
name = "stockgg"
version = "0.2.0"
description = "Public-facing IIA daily site — renders Supabase analysis output to HTML and deploys to Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",         # db-proxy HTTPS adapter
    "python-dotenv>=1.2.2",  # SUPABASE_SERVICE_ROLE_KEY from .env
    "yfinance>=1.3.0",       # analyst consensus + watch-stock change%
    "lxml>=5.3.0",           # yfinance dependency
]
